--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,12 +5,12 @@ version: 1.1.2
 homepage: https://github.com/ikicodedev/calendar_timeline
 
 environment:
-  sdk: '>=2.12.0 <3.0.0'
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
-  intl: ">=0.17.0 <0.19.0"
+  intl: ^0.19.0
   scrollable_positioned_list: ^0.3.5
 
 dev_dependencies:
